Refactor server.py for environment variable support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.12.2",
     "pillow>=11.3.0",
+    "python-dotenv>=1.1.1",
     "requests>=2.32.4",
 ]
